--- a/music/styles.css
+++ b/music/styles.css
@@ -3,24 +3,7 @@ html {
     background: linear-gradient(#4C002D, #25005F);
 }
 
-table {
-    font-family: system-ui;
-    border-collapse: separate;
-    width: 100%;
-    table-layout: fixed;
-    border: 3px #000;
-    padding: .7cm;
-}
-
-td {
-    text-align: center;
-    padding: 8px;
-    background: #d7d7d7;
-    color: #000;
-}
-
-
-.music-artists {
+.minami {
     display: flex;
     width: auto;
     height: 300px;
@@ -29,7 +12,7 @@ td {
     margin-right: -.2cm;
 }
 
-.music-artists img {
+.minami img {
     width: 0px;
     flex-grow: 1;
     object-fit: cover;
@@ -37,7 +20,7 @@ td {
     transition: 1s ease;
 }
 
-.music-artists img:hover {
+.minami img:hover {
     cursor: crosshair;
     width: 300px;
     opacity: 1;
