--- a/piano/styles.css
+++ b/piano/styles.css
@@ -1,5 +1,11 @@
+@media (67.5em > width > 30em) {}
+
+@media (width > 67.5em) {}
+
 html {
     height: 100%;
+    font-size: 100%;
+    background-image: linear-gradient(#500050, #ff7);
 }
 
 body {
@@ -9,7 +15,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(#500050, #ff7);
 }
 
 a {
