--- a/music/styles.css
+++ b/music/styles.css
@@ -1,7 +1,7 @@
 html {
     height: 100%;
-    font-size: 100%;
     background: linear-gradient(#4C002D, #25005F);
+    background-attachment: fixed;
 }
 
 .media {
