--- a/piano/styles.css
+++ b/piano/styles.css
@@ -1,7 +1,7 @@
 html {
     height: 100%;
-    font-size: 100%;
     background-image: linear-gradient(#500050, #ff7);
+    background-attachment: fixed;
 }
 
 body {
