--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -8,7 +8,7 @@ html {
 
 body {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
 }
 
 dl {
