--- a/links/styles.css
+++ b/links/styles.css
@@ -1,6 +1,6 @@
 html {
     height: 100%;
-    background: linear-gradient(rgb(184, 98, 123), rgb(31, 122, 47));
+    background: linear-gradient(310deg, rgb(184, 98, 123), rgb(31, 122, 47));
     background-attachment: fixed;
 }
 
