--- a/art/styles.css
+++ b/art/styles.css
@@ -6,7 +6,7 @@ html {
 
 body {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto;
     place-items: center;
 }
 
