--- a/art/styles.css
+++ b/art/styles.css
@@ -5,9 +5,11 @@ html {
 }
 
 body {
+    padding: 0.25em;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     place-items: center;
+    gap: 1em;
 }
 
 img,
