--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ div {
     padding: .25em;
 }
 
-button {
+div button {
     width: 400px;
     height: 160px;
     border: none;
@@ -26,10 +26,13 @@ button {
     font-style: oblique;
 }
 
-a {
+#love-function {
+    position: fixed;
+    right: 0;
+    top: 0;
+    border: none;
+    border-radius: 50%;
+    background: none;
     color: #dfdfdf;
-    text-decoration: none;
-    position: absolute;
-    right: 8px;
-    top: 3px;
+    cursor: pointer;
 }
