--- a/links/styles.css
+++ b/links/styles.css
@@ -6,18 +6,64 @@ html {
 
 body {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
     padding: .25em;
     gap: .25em;
 }
 
 button {
-    min-height: 3.5em;
+    margin: 20px;
+    outline: none;
+    width: 550px;
+    height: auto;
+    min-height: 50px;
+    padding: 10px 25px;
+    border: 2px solid #000;
     font-family: system-ui;
-    font-size: 14px;
-    color: #dfdfdf;
-    border: none;
-    background: radial-gradient(circle, rgb(101, 0, 148), rgb(30, 8, 82));
+    font-weight: 500;
+    background: transparent;
     cursor: pointer;
-    border-radius: 8px;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    background: #000;
+    color: #fff;
+    line-height: 42px;
+    padding: 0;
+    border: none;
+    z-index: 1;
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+button:hover {
+    background: transparent;
+    color: #000;
+}
+
+button:before,
+button:after {
+    position: absolute;
+    content: "";
+    left: 0;
+    width: 100%;
+    height: 50%;
+    right: 0;
+    z-index: -1;
+    background: #000;
+    transition: all 0.3s ease;
+}
+
+button:before {
+    top: 0;
+}
+
+button:after {
+    bottom: 0;
+}
+
+button:hover:before,
+button:hover:after {
+    height: 0;
+    background-color: #000;
 }
