--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,72 @@
 html {
     height: 100%;
-    background: linear-gradient(rgb(122, 67, 93), rgb(152, 67, 93));
+    background: rosybrown;
     background-attachment: fixed;
 }
 
 div {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
     gap: 2em;
     place-items: center;
     padding: .25em;
 }
 
 div button {
-    width: 400px;
-    height: 160px;
-    border: none;
-    border-radius: 8px;
-    color: #dfdfdf;
-    background: linear-gradient(130deg, rgb(0, 150, 120), rgb(0, 40, 190));
-    cursor: pointer;
+    margin: 20px;
+    outline: none;
+    width: 200px;
+    height: 100px;
+    padding: 10px 25px;
+    border: 2px solid #000;
     font-family: system-ui;
-    font-size: 60px;
-    font-weight: lighter;
-    font-style: oblique;
+    font-weight: 500;
+    font-size: 25px;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    background: #000;
+    color: #fff;
+    line-height: 42px;
+    padding: 0;
+    border: none;
+    z-index: 1;
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+div button:hover {
+    background: transparent;
+    color: #000;
+}
+
+div button:before,
+div button:after {
+    position: absolute;
+    content: "";
+    left: 0;
+    width: 100%;
+    height: 50%;
+    right: 0;
+    z-index: -1;
+    background: #000;
+    transition: all 0.3s ease;
+}
+
+div button:before {
+    top: 0;
+}
+
+div button:after {
+    bottom: 0;
+}
+
+div button:hover:before,
+div button:hover:after {
+    height: 0;
+    background-color: #000;
 }
 
 #love-function {
@@ -33,6 +76,7 @@ div button {
     border: none;
     border-radius: 50%;
     background: none;
-    color: #dfdfdf;
     cursor: pointer;
+    font-size: 18px;
+    color: purple;
 }
