--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     -webkit-user-drag: none;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -9,7 +10,6 @@
 html {
     height: 100%;
     background: rosybrown;
-    background-attachment: fixed;
 }
 
 #love-function {
@@ -24,49 +24,34 @@ html {
     color: red;
 }
 
-.music {
+#music {
     position: absolute;
     display: flex;
     white-space: nowrap;
     left: 0;
     top: 0;
-    animation: movement linear 100s infinite alternate;
+    animation: movement linear 80s infinite alternate;
 }
 
-#song {
+#art {
+    position: absolute;
+    display: flex;
+    white-space: nowrap;
+    left: 0;
+    top: 300px;
+    animation: movement linear 80s infinite alternate;
+}
+
+#item {
     width: 300px;
     height: 300px;
     filter: brightness(50%);
     transition: .8s ease;
 }
 
-#song:hover {
+#item:hover {
     cursor: pointer;
     filter: brightness(100%);
-}
-
-.art {
-    position: absolute;
-    display: none;
-    white-space: nowrap;
-    left: 0;
-    top: 300px;
-}
-
-#picture {
-    width: 300px;
-    height: 300px;
-    flex-grow: 1;
-    object-fit: cover;
-    opacity: .8;
-    transition: .8s ease;
-}
-
-#picture:hover {
-    height: 310px;
-    cursor: pointer;
-    opacity: 1;
-    filter: contrast(120%);
 }
 
 @keyframes movement {
